creando pagina de recursos y usuarios con sus componentes

--- a/src/pages/register/styles.module.css
+++ b/src/pages/register/styles.module.css
@@ -33,7 +33,7 @@
     color: var(--btns-color-blue);
 }
 
-.page_tittle h1{
+.page_title h1{
     font-family: var(--p-alternative-font);
     color: var(--secondary-color-light-blue)
 }
