--- a/src/pages/usuarios/styles.module.css
+++ b/src/pages/usuarios/styles.module.css
@@ -7,9 +7,9 @@
     height: 100vh;
     display:flex;
     flex-direction: column;
-    padding: 0 50px;
+    padding: 10px 50px;
     background: #F9FEFF;
-
+    overflow: auto;
 }
 
 .page_title{
