--- a/src/components/ModalCreateUser/styles.module.css
+++ b/src/components/ModalCreateUser/styles.module.css
@@ -1,9 +1,19 @@
 .ModalCreateUser_container{
-    height: 80vh;
+    min-height: 90vh;
+    height: 90vh;
     background: white;
     padding: 30px 50px;
     display:flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.form_createUser_container{
+    min-height: 90%;
+    width: 100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
 }
 
