funcion filtro por roles relizada

--- a/src/pages/usuarios/styles.module.css
+++ b/src/pages/usuarios/styles.module.css
@@ -40,9 +40,11 @@
     color: black;
     margin: 0 30px;
     font-weight: bold;
+    cursor: pointer;
 }
 .table_title_p_active{
     color: #28ABE7;
     margin: 0 30px;
     font-weight: bold;
+    cursor: pointer;
 }
