--- a/src/pages/reportes/styles.module.css
+++ b/src/pages/reportes/styles.module.css
@@ -39,3 +39,29 @@
     margin: 0 30px;
 }
 
+@media screen and (max-width: 630px) {
+
+    .page_container{
+        padding: 10px 30px;
+    }
+
+    .table_title{
+        justify-content: space-between;
+        padding:0;
+    }
+
+    .table_title_first_container{
+        width:100%;
+    }
+
+    .table_title_first_container .table_title_p{
+        width: 50%;
+    }
+
+    .table_title_p{
+        padding:0;
+        margin:0;
+        min-width: 33%;
+        text-align:center;
+    }
+}
