--- a/src/components/ModalCreateUser/styles.module.css
+++ b/src/components/ModalCreateUser/styles.module.css
@@ -1,8 +1,7 @@
 .ModalCreateUser_container{
-    min-height: 90vh;
-    height: 90vh;
+    min-height: fit-content;
     background: white;
-    padding: 30px 50px;
+    padding: 20px 50px;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -25,7 +24,7 @@
 }
 
 .btn_section{
-    margin-top: 30px;
+    margin-top: 20px;
     display:flex;
     justify-content: space-between;
 }
