--- a/src/components/SideMenu/styles.module.css
+++ b/src/components/SideMenu/styles.module.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     background-color: #263238;
     padding-top: 40px;
+    position: relative;
 }
 
 
@@ -34,7 +35,6 @@
     margin: 0;
     padding: 0;
 }
-
 
 @media screen and (max-width: 840px) {
     .sideMenu{
